--- a/Source/WebInspectorUI/UserInterface/Views/Slider.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Slider.css
@@ -34,7 +34,7 @@
     top: -5px;
     width: 14px;
     height: 17px;
-    content: image-set(url(../Images/SliderThumb.png) 1x, url(../Images/SliderThumb@2x.png) 2x);
+    content: url(../Images/SliderThumb.png);
 }
 
 body[dir=ltr] .slider > img {
@@ -48,7 +48,7 @@ body[dir=rtl] .slider > img {
 }
 
 .slider > img.dragging {
-    content: image-set(url(../Images/SliderThumbPressed.png) 1x, url(../Images/SliderThumbPressed@2x.png) 2x);
+    content: url(../Images/SliderThumbPressed.png);
 }
 
 .slider:focus {
