--- a/Source/WebInspectorUI/UserInterface/Views/SourceCodeTextEditor.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SourceCodeTextEditor.css
@@ -182,7 +182,7 @@
 .hover-menu.color > img {
     width: 16px;
     height: 16px;
-    content: image-set(url(../Images/ColorIcon.png) 1x, url(../Images/ColorIcon@2x.png) 2x);
+    content: url(../Images/ColorIcon.png);
     transform: translateY(0.5px);
 }
 
