--- a/Source/WebInspectorUI/UserInterface/Views/CookiePopover.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CookiePopover.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2019 Apple Inc. All rights reserved.
+ * Copyright (C) 2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -23,25 +23,45 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#pragma once
+ .popover .cookie-popover-content {
+    max-width: 420px;
+    padding: 4px 8px;
+}
 
-#include <WebCore/CookieJar.h>
+.popover .cookie-popover-content > table {
+    width: 100%;
+}
 
-namespace WebKit {
+.popover .cookie-popover-content > table > tr > th {
+    font-weight: bold;
+    text-align: end;
+    line-height: 23px;
+    vertical-align: top;
+    white-space: nowrap;
+    color: hsl(0, 0%, 34%);
+}
 
-class WebCookieJar final : public WebCore::CookieJar {
-public:
-    static Ref<WebCookieJar> create() { return adoptRef(*new WebCookieJar); }
-    
-    String cookies(WebCore::Document&, const URL&) const final;
-    void setCookies(WebCore::Document&, const URL&, const String& cookieString) final;
-    bool cookiesEnabled(const WebCore::Document&) const final;
-    std::pair<String, WebCore::SecureCookiesAccessed> cookieRequestHeaderFieldValue(const URL& firstParty, const WebCore::SameSiteInfo&, const URL&, Optional<WebCore::FrameIdentifier>, Optional<WebCore::PageIdentifier>, WebCore::IncludeSecureCookies) const final;
-    bool getRawCookies(const WebCore::Document&, const URL&, Vector<WebCore::Cookie>&) const final;
-    void setRawCookie(const WebCore::Document&, const WebCore::Cookie&) final;
-    void deleteCookie(const WebCore::Document&, const URL&, const String& cookieName) final;
-private:
-    WebCookieJar();
-};
+.popover .cookie-popover-content > table > tr > td {
+    -webkit-padding-start: 4px;
+}
 
-} // namespace WebKit
+/* FIXME: <https://webkit.org/b/209389> Web Inspector: use native datetime-local picker for changing `expires` value in cookie popover */
+
+.popover .cookie-popover-content > table > tr > td > input:matches([type="text"], [type="datetime-local"]) {
+    width: 100%;
+    padding: 3px 4px 2px;
+    font-family: Menlo, monospace;
+    background-color: var(--background-color-code);
+    border: 1px solid var(--text-color-quaternary);
+    -webkit-appearance: none;
+}
+
+.popover .cookie-popover-content > table > tr > td > input:matches([type="text"], [type="datetime-local"]).invalid {
+    color: var(--error-text-color);
+}
+
+@media (prefers-color-scheme: dark) {
+    .popover .cookie-popover-content > table > tr > th {
+        color: var(--text-color-secondary);
+    }
+}
